--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ if(WIN32)
   string(REPLACE "\\" "/" GMSH_PATH "${GMSH_PATH}")                                                 # Adjusting backslashes...
   string(REPLACE "\\" "/" CL_PATH "${CL_PATH}")                                                     # Adjusting backslashes...
   string(REPLACE "\\" "/" IMGUI_PATH "${IMGUI_PATH}")                                               # Adjusting backslashes...
+  string(REPLACE "\\" "/" IMPLOT_PATH "${IMPLOT_PATH}")                                             # Adjusting backslashes...
   string(REPLACE "\\" "/" NEUTRINO_PATH "${NEUTRINO_PATH}")                                         # Adjusting backslashes...
 endif(WIN32)
 
@@ -43,12 +44,15 @@ set(NU_SOURCES                                                                  
   ${IMGUI_PATH}/imgui_impl_glfw.cpp                                                                 # IMGUI source file...
   ${IMGUI_PATH}/imgui_impl_opengl3.cpp                                                              # IMGUI source file...
   ${IMGUI_PATH}/imgui_tables.cpp                                                                    # IMGUI source file...
-  ${IMGUI_PATH}/imgui_widgets.cpp)                                                                  # IMGUI source file...
+  ${IMGUI_PATH}/imgui_widgets.cpp                                                                   # IMGUI source file...
+  ${IMPLOT_PATH}/implot.cpp                                                                         # IMPLOT source file...
+  ${IMPLOT_PATH}/implot_items.cpp)                                                                  # IMPLOT source file...
 
 message("Setting NU_INCLUDES...")                                                                   # Printing message...
 set(NU_INCLUDES                                                                                     # Setting "NU_INCLUDES" variable...
   ${CMAKE_HOME_DIRECTORY}/include                                                                   # Example include directory.
   ${IMGUI_PATH}                                                                                     # IMGUI include directory.
+  ${IMPLOT_PATH}                                                                                    # IMPLOT include directory.
   ${GLAD_PATH}/include                                                                              # GLAD include directory.
   ${GLFW_PATH}/include                                                                              # GLFW include directory.
   ${CL_PATH}/include                                                                                # OpenCL include directory.
