Hud fixed, according to new methods.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,15 +36,18 @@ if(WIN32)
   string(REPLACE "\\" "/" NEUTRINO_PATH "${NEUTRINO_PATH}")                                         # Adjusting backslashes...
 endif(WIN32)
 
-message("Setting NU_SOURCES...")                                                                    # Printing message...
-set(NU_SOURCES                                                                                      # Setting "NU_SOURCES" variable...
+message("Setting IMGUI_SOURCES...")                                                                 # Printing message...
+set(IMGUI_SOURCES                                                                                   # All IMGUI source files.
   ${IMGUI_PATH}/imgui.cpp                                                                           # IMGUI source file...
   ${IMGUI_PATH}/imgui_demo.cpp                                                                      # IMGUI source file...
   ${IMGUI_PATH}/imgui_draw.cpp                                                                      # IMGUI source file...
-  ${IMGUI_PATH}/imgui_impl_glfw.cpp                                                                 # IMGUI source file...
-  ${IMGUI_PATH}/imgui_impl_opengl3.cpp                                                              # IMGUI source file...
+  ${IMGUI_PATH}/backends/imgui_impl_glfw.cpp                                                        # IMGUI source file...
+  ${IMGUI_PATH}/backends/imgui_impl_opengl3.cpp                                                     # IMGUI source file...
   ${IMGUI_PATH}/imgui_tables.cpp                                                                    # IMGUI source file...
-  ${IMGUI_PATH}/imgui_widgets.cpp                                                                   # IMGUI source file...
+  ${IMGUI_PATH}/imgui_widgets.cpp)                                                                  # IMGUI source file...
+
+message("Setting IMPLOT_SOURCES...")                                                                # Printing message...
+set(IMPLOT_SOURCES                                                                                  # All IMPLOT source files.
   ${IMPLOT_PATH}/implot.cpp                                                                         # IMPLOT source file...
   ${IMPLOT_PATH}/implot_items.cpp)                                                                  # IMPLOT source file...
 
@@ -52,6 +55,7 @@ message("Setting NU_INCLUDES...")                                               
 set(NU_INCLUDES                                                                                     # Setting "NU_INCLUDES" variable...
   ${CMAKE_HOME_DIRECTORY}/include                                                                   # Example include directory.
   ${IMGUI_PATH}                                                                                     # IMGUI include directory.
+  ${IMGUI_PATH}/backends                                                                            # IMGUI include backends directory.
   ${IMPLOT_PATH}                                                                                    # IMPLOT include directory.
   ${GLAD_PATH}/include                                                                              # GLAD include directory.
   ${GLFW_PATH}/include                                                                              # GLFW include directory.
@@ -88,7 +92,7 @@ aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_1}/src SRC_1)          
 set(SOURCES_1 ${SRC_1})                                                                             # Setting "SOURCES" variable...
 
 message("Adding build target as executable...")                                                     # Printing message...
-add_executable(${TARGET_1} ${NU_SOURCES} ${SOURCES_1})                                              # Adding executable...
+add_executable(${TARGET_1} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_1})                         # Adding executable...
 
 message("Adding include files...")                                                                  # Printing message...
 target_include_directories(${TARGET_1} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
@@ -120,7 +124,8 @@ aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_2}/src SRC_2)          
 set(SOURCES_2 ${SRC_2})                                                                             # Setting "SOURCES" variable...
 
 message("Adding build target as executable...")                                                     # Printing message...
-add_executable(${TARGET_2} ${NU_SOURCES} ${SOURCES_2})                                              # Adding executable...
+message("Adding build target as executable...")                                                     # Printing message...
+add_executable(${TARGET_2} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_2})                         # Adding executable...
 
 message("Adding include files...")                                                                  # Printing message...
 target_include_directories(${TARGET_2} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
@@ -153,7 +158,8 @@ aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_3}/src SRC_3)          
 set(SOURCES_3 ${SRC_3})                                                                             # Setting "SOURCES" variable...
 
 message("Adding build target as executable...")                                                     # Printing message...
-add_executable(${TARGET_3} ${NU_SOURCES} ${SOURCES_3})                                              # Adding executable...
+message("Adding build target as executable...")                                                     # Printing message...
+add_executable(${TARGET_3} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_3})                         # Adding executable...
 
 message("Adding include files...")                                                                  # Printing message...
 target_include_directories(${TARGET_3} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
@@ -186,7 +192,7 @@ aux_source_directory(${CMAKE_HOME_DIRECTORY}/${DIRECTORY_4}/src SRC_4)          
 set(SOURCES_4 ${SRC_4})                                                                             # Setting "SOURCES" variable...
 
 message("Adding build target as executable...")                                                     # Printing message...
-add_executable(${TARGET_4} ${NU_SOURCES} ${SOURCES_4})                                              # Adding executable...
+add_executable(${TARGET_4} ${IMGUI_SOURCES} ${IMPLOT_SOURCES} ${SOURCES_4})                         # Adding executable...
 
 message("Adding include files...")                                                                  # Printing message...
 target_include_directories(${TARGET_4} PRIVATE ${NU_INCLUDES})                                      # Setting include directories...
